--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,7 +54,28 @@ body {
     padding: 0;
 
     li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 8px;
+      margin-bottom: 5px;
+      background-color: #f5f5f5;
+      border-radius: 4px;
+      border: 1px solid #dcdcdc;
 
+      button {
+        padding: 5px 10px;
+        font-size: 14px;
+        border: none;
+        background-color: #383838;
+        color: #fff;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+      button:hover {
+        background-color: #000000;
+      }
     }
   }
 }
