--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,6 +76,9 @@ body {
       button:hover {
         background-color: #000000;
       }
+      .delete-button {
+        margin-left: 0.5em;
+      }
     }
   }
 }
