--- a/public/styles.css
+++ b/public/styles.css
@@ -55,11 +55,14 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px;
   margin-bottom: 5px;
   background-color: #f5f5f5;
   border-radius: 4px;
   border: 1px solid #dcdcdc;
+}
+.add-task__list li div {
+  margin: 8px;
+  display: flex;
 }
 .add-task__list li button {
   padding: 5px 10px;
@@ -76,6 +79,18 @@ body {
 }
 .add-task__list li .delete-button {
   margin-left: 0.5em;
+}
+.add-task__list li > span {
+  cursor: pointer;
+  padding: 12px;
+  width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.add-task__list li input {
+  width: 75%;
+  margin-left: 0.5em;
+  padding: 0.4em;
 }
 
 .filter {
