--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,12 +57,15 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 8px;
       margin-bottom: 5px;
       background-color: #f5f5f5;
       border-radius: 4px;
       border: 1px solid #dcdcdc;
 
+      div {
+        margin: 8px;
+        display: flex;
+      }
       button {
         padding: 5px 10px;
         font-size: 14px;
@@ -78,6 +81,18 @@ body {
       }
       .delete-button {
         margin-left: 0.5em;
+      }
+      > span {
+        cursor: pointer;
+        padding: 12px;
+        width: 80%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      input {
+        width: 75%;
+        margin-left: 0.5em;
+        padding: 0.4em;
       }
     }
   }
