--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,11 @@
 body {
   font-family: Arial, sans-serif;
   background-color: rgba(246, 246, 246, 0.4);
-  height: 90vh;
+  height: 100%;
 }
 
 .container {
-  height: 90vh;
+  height: auto;
   max-width: 800px;
   margin: 30px auto;
   padding: 20px;
@@ -13,20 +13,18 @@ body {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 5px;
 }
-
-.title {
+.container .title {
   text-align: center;
   font-size: 2em;
   margin-bottom: 1em;
   color: #383838;
 }
-
-.add-task__form {
+.container .add-task__form {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
 }
-.add-task__input {
+.container .add-task__input {
   width: 100%;
   padding: 8px;
   margin-right: 1em;
@@ -34,7 +32,7 @@ body {
   border: 1px solid #383838;
   border-radius: 4px;
 }
-.add-task__button {
+.container .add-task__button {
   padding: 8px 20px;
   font-size: 1em;
   border: none;
@@ -44,14 +42,25 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
 }
-.add-task__button:hover {
+.container .add-task__button:hover {
   background-color: #000000;
 }
-.add-task__list {
+.container .add-task .filter {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+.container .add-task .filter .filter__select {
+  padding: 8px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.container .add-task__list {
   list-style-type: none;
   padding: 0;
 }
-.add-task__list li {
+.container .add-task__list li {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -60,11 +69,11 @@ body {
   border-radius: 4px;
   border: 1px solid #dcdcdc;
 }
-.add-task__list li div {
+.container .add-task__list li div {
   margin: 8px;
   display: flex;
 }
-.add-task__list li button {
+.container .add-task__list li button {
   padding: 5px 10px;
   font-size: 14px;
   border: none;
@@ -74,33 +83,29 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
 }
-.add-task__list li button:hover {
+.container .add-task__list li button:hover {
   background-color: #000000;
 }
-.add-task__list li .delete-button {
+.container .add-task__list li .delete-button {
   margin-left: 0.5em;
 }
-.add-task__list li > span {
+.container .add-task__list li > span {
   cursor: pointer;
   padding: 12px;
   width: 80%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.add-task__list li input {
+.container .add-task__list li input {
   width: 75%;
   margin-left: 0.5em;
   padding: 0.4em;
 }
-
-.filter {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
+.container footer {
+  margin-top: 150px;
 }
-.filter .filter__select {
-  padding: 8px;
-  font-size: 1em;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+.container footer .animal-image {
+  width: 100%;
+  height: auto;
+  margin: 50px 10px 0px 10px;
 }
