--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,111 +1,119 @@
 body {
   font-family: Arial, sans-serif;
   background-color: rgb(246 246 246 / 40%);
-  height: 90vh;
+  height: 100%;
 }
 
 .container {
-  height: 90vh;
+  height: auto;
   max-width: 800px;
   margin: 30px auto;
   padding: 20px;
   background-color: rgb(214 214 214 / 39%);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 5px;
-}
 
-.title {
-  text-align: center;
-  font-size: 2em;
-  margin-bottom: 1em;
-  color: #383838;
-}
+  .title {
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 1em;
+    color: #383838;
+  }
+  .add-task {
 
-.add-task {
-
-  &__form {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-  &__input {
-    width: 100%;
-    padding: 8px;
-    margin-right: 1em;
-    font-size: 1em;
-    border: 1px solid #383838;
-    border-radius: 4px;
-  }
-  &__button {
-    padding: 8px 20px;
-    font-size: 1em;
-    border: none;
-    background-color: #383838;
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  &__button:hover {
-    background-color: #000000;
-  }
-  &__list {
-    list-style-type: none;
-    padding: 0;
-
-    li {
+    &__form {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      margin-bottom: 5px;
-      background-color: #f5f5f5;
+      margin-bottom: 20px;
+    }
+    &__input {
+      width: 100%;
+      padding: 8px;
+      margin-right: 1em;
+      font-size: 1em;
+      border: 1px solid #383838;
       border-radius: 4px;
-      border: 1px solid #dcdcdc;
-
-      div {
-        margin: 8px;
+    }
+    &__button {
+      padding: 8px 20px;
+      font-size: 1em;
+      border: none;
+      background-color: #383838;
+      color: #fff;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    &__button:hover {
+      background-color: #000000;
+    }
+    .filter {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+    
+      .filter__select {
+        padding: 8px;
+        font-size: 1em;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+    }
+    &__list {
+      list-style-type: none;
+      padding: 0;
+  
+      li {
         display: flex;
-      }
-      button {
-        padding: 5px 10px;
-        font-size: 14px;
-        border: none;
-        background-color: #383838;
-        color: #fff;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 5px;
+        background-color: #f5f5f5;
         border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-      }
-      button:hover {
-        background-color: #000000;
-      }
-      .delete-button {
-        margin-left: 0.5em;
-      }
-      > span {
-        cursor: pointer;
-        padding: 12px;
-        width: 80%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-      input {
-        width: 75%;
-        margin-left: 0.5em;
-        padding: 0.4em;
+        border: 1px solid #dcdcdc;
+  
+        div {
+          margin: 8px;
+          display: flex;
+        }
+        button {
+          padding: 5px 10px;
+          font-size: 14px;
+          border: none;
+          background-color: #383838;
+          color: #fff;
+          border-radius: 4px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+        }
+        button:hover {
+          background-color: #000000;
+        }
+        .delete-button {
+          margin-left: 0.5em;
+        }
+        > span {
+          cursor: pointer;
+          padding: 12px;
+          width: 80%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        input {
+          width: 75%;
+          margin-left: 0.5em;
+          padding: 0.4em;
+        }
       }
     }
   }
-}
-.filter {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-
-  .filter__select {
-    padding: 8px;
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  footer {
+    margin-top: 150px;
+  
+    .animal-image {
+      width: 100%;
+      height: auto;
+      margin: 50px 10px 0px 10px;
+    }
   }
 }
